HTML is pretty much done, added css and 2 images

--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/styles.css">
     <title>Derek Slauson</title>
 </head>
 <body>
-    
+    <div id="sidebar">
+        <h1>Derek Slauson</h1>
+        <h3>Full Stack Developer</h3>
+        <hr>
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Education</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Resume</a></li>
+        </ul>
+    </div>
+    <div id="content">
+        <div id="missionStatement">
+            <h1>I want to turn <span id="span1">ideas</span> into <span id="span2">reality.</span></h1>
+            <!--Eventually make background for this div be image of some kind -->
+        </div>
+
+        <div id="articles">
+            <div id="aboutContent">
+                <h1>ABOUT</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, nemo sed quod officia voluptas rem tenetur minima iste et suscipit pariatur, consequatur amet quisquam. Quis sequi cumque ad autem beatae.</p>
+            </div>
+            <div id="projectsContent">
+                <h1>PROJECTS</h1>
+                <p>Coming soon...</p>
+            </div>
+            <div id="skillsContent">
+                <h1>SKILLS</h1>
+                <p>Coming soon...</p>
+            </div>
+            <div id="educationContent">
+                <h1>EDUCATION</h1>
+                <p>Coming soon...</p>
+            </div>
+            <div id="contactContent">
+                <h1>CONTACT</h1>
+                <p>Coming soon...</p>
+            </div>
+            <div id="resumeContent">
+                <h1>RESUME</h1>
+                <p>Coming soon...</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
