--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
         <div id="articles">
             <div id="aboutContent">
                 <h1>ABOUT</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis, nemo sed quod officia voluptas rem tenetur minima iste et suscipit pariatur, consequatur amet quisquam. Quis sequi cumque ad autem beatae.</p>
+                <div id="v1"></div>
+                <h3>Full stack developer in the process of learning the tools to put my passion for problem solving and creating to work.</h3>
+                <p>I've always wanted a job that's meaningful to me. For this reason I'm currently working towards completing the University of Wisconsin Full Stack Development Boot Camp. Prior to this, I worked at a grocery store for several years and completed an associates degree from Madison Area Technical College.</p>
+                <p>I'm extremely excited to complete the boot camp and use the skills I gained to bring ideas to life in a web/software developer position while continuing to learn on the job. I'm passionate about building solutions, this is why I want to make an impact at a great company as a web/software developer.</p>
+            </div>
+            <div id="seekingContent">
+                <h1>SEEKING</h1>
+                <p>Coming soon...</p>
             </div>
             <div id="projectsContent">
                 <h1>PROJECTS</h1>
+                <p>Slide show?</p>
                 <p>Coming soon...</p>
             </div>
             <div id="skillsContent">
