Finished education section

--- a/index.html
+++ b/index.html
@@ -35,10 +35,6 @@
                 <p>I've always wanted a job that's meaningful to me. For this reason I'm currently working towards completing the University of Wisconsin Full Stack Development Boot Camp. Prior to this, I worked at a grocery store for several years and completed an associates degree from Madison Area Technical College.</p>
                 <p>I'm extremely excited to complete the boot camp and use the skills I gained to bring ideas to life in a web/software developer position while continuing to learn on the job. I'm passionate about building solutions, this is why I want to make an impact at a great company as a web/software developer.</p>
             </div>
-            <div id="seekingContent">
-                <h1>SEEKING</h1>
-                <p>Coming soon...</p>
-            </div>
             <div id="projectsContent">
                 <h1>PROJECTS</h1>
                 <p>Slide show?</p>
@@ -50,11 +46,21 @@
             </div>
             <div id="educationContent">
                 <h1>EDUCATION</h1>
-                <p>Coming soon...</p>
+                <div id="matc">
+                    <h3>MADISON AREA TECHNICAL COLLEGE</h3>
+                    <P>Madison, WI</P>
+                    <ul>
+                        <li>AS in Web Software Development</li>
+                        <li>GPA: 3.917</li>
+                    </ul>
+                </div>
             </div>
             <div id="contactContent">
                 <h1>CONTACT</h1>
-                <p>Coming soon...</p>
+                <div id="email">
+                    <a href="#"><img src="assets/images/EmailIcon.png" alt="Email Icon"></a>
+                    <p>derek.slauson5@gmail.com</p>
+                </div>
             </div>
             <div id="resumeContent">
                 <h1>RESUME</h1>
