Changed banner size

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 
+        -Fix gap at top of page above image and at bottom of page
+        -Temporarily fixed gap at top by using borders on #missionstatement, ask why it behaves like that, is there a better way?
+    -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,9 +28,7 @@
     <div id="content">
         <div id="missionStatement">
             <h1>I want to turn <span id="span1">ideas</span> into <span id="span2">reality.</span></h1>
-            <!--Eventually make background for this div be image of some kind -->
         </div>
-
         <div id="articles">
             <div id="aboutContent">
                 <h1>ABOUT</h1>
