Made nav bar functional

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <h3>Full Stack Developer</h3>
         <hr>
         <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Education</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="#aboutContent">About</a></li>
+            <li><a href="#projectsContent">Projects</a></li>
+            <li><a href="#skillsContent">Skills</a></li>
+            <li><a href="#educationContent">Education</a></li>
+            <li><a href="#contactContent">Contact</a></li>
+            <li><a href="#resumeContent">Resume</a></li>
         </ul>
     </div>
     <div id="content">
