Added google font, deleted some unnecessary css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
             href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
             integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
             crossorigin="anonymous">
-        <title>Derek Slauson</title>
+        <title>&lt;/&gt; Derek Slauson | Full-Stack Developer</title>
+
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="sidebar">
@@ -46,7 +51,40 @@
                 </article>
                 <article id="skillsContent">
                     <h1>SKILLS</h1>
-                    <p>Coming soon...</p>
+                    <span>
+                        <div>
+                            <i class="fab fa-html5 skillsIcon"></i>
+                        </div>
+                        <div>
+                            <p>HTML5</p>
+                        </div>
+                    </span>
+
+                    <span>
+                        <div>
+                            <i class="fab fa-css3-alt skillsIcon"></i>
+                        </div>
+                        <div>
+                            <p>CSS3</p>
+                        </div>
+                    </span>
+
+                    <span>
+                        <div>
+                            <i class="fab fa-js-square skillsIcon"></i>
+                        </div>
+                        <div>
+                            <p>Javascript</p>
+                        </div>
+                    </span>
+                    <span>
+                        <div>
+                            <i class="fab fa-github skillsIcon"></i>
+                        </div>
+                        <div>
+                            <p>Github</p>
+                        </div>
+                    </span>
                 </article>
                 <article id="educationContent">
                     <h1>EDUCATION</h1>
@@ -88,7 +126,7 @@
                 </article>
                 <article id="resumeContent">
                     <h1>RESUME</h1>
-                    <section id="linkedin">
+                    <section id="resume">
                         <a href="assets/docs/Resume.pdf" target="_blank">
                             <i class="fas fa-file icon"></i></a>
                         <a href="assets/docs/Resume.pdf" target="_blank">
