Made styles.css more readable, replaced some px units with em units

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </head>
     <body>
         <div id="sidebar">
-            <h1>Derek Slauson</h1>
-            <h3>Full Stack Developer</h3>
+            <a href="#top"><h1>Derek Slauson</h1></a>
+            <h2>Full Stack Developer</h2>
             <hr>
             <nav>
                 <ul>
@@ -34,23 +34,23 @@
         </div>
         <main>
             <div id="missionStatement">
-                <h1>I want to turn <span id="span1">ideas</span> into <span id="span2">reality.</span></h1>
+                <h2>I want to turn <span id="span1">ideas</span> into <span id="span2">reality.</span></h2>
             </div>
             <div id="articles">
                 <article id="aboutContent">
-                    <h1>ABOUT</h1>
+                    <h2>ABOUT</h2>
                     <div id="v1"></div>
                     <h3>Full stack developer in the process of learning the tools to put my passion for problem solving and creating to work.</h3>
                     <p>I've always wanted a job that's meaningful to me. For this reason I'm currently working towards completing the University of Wisconsin Full Stack Development Boot Camp. Prior to this, I worked at a grocery store for several years and completed an associates degree from Madison Area Technical College.</p>
                     <p>I'm extremely excited to complete the boot camp and use the skills I gained to bring ideas to life in a web/software developer position while continuing to learn on the job. I'm passionate about building solutions, this is why I want to make an impact at a great company as a web/software developer.</p>
                 </article>
                 <article id="projectsContent">
-                    <h1>PROJECTS</h1>
+                    <h2>PROJECTS</h2>
                     <p>Slide show?</p>
                     <p>Coming soon...</p>
                 </article>
                 <article id="skillsContent">
-                    <h1>SKILLS</h1>
+                    <h2>SKILLS</h2>
                     <span>
                         <div>
                             <i class="fab fa-html5 skillsIcon"></i>
@@ -87,7 +87,7 @@
                     </span>
                 </article>
                 <article id="educationContent">
-                    <h1>EDUCATION</h1>
+                    <h2>EDUCATION</h2>
                     <div id="matc">
                         <h3>MADISON AREA TECHNICAL COLLEGE</h3>
                         <P>Madison, WI</P>
@@ -98,7 +98,7 @@
                     </div>
                 </article>
                 <article id="contactContent">
-                    <h1>CONTACT</h1>
+                    <h2>CONTACT</h2>
                     <section id="email">
                         <a href="mailto:derek.slauson5@gmail.com">
                             <i class="far fa-envelope icon"></i>
@@ -125,7 +125,7 @@
                     </section>
                 </article>
                 <article id="resumeContent">
-                    <h1>RESUME</h1>
+                    <h2>RESUME</h2>
                     <section id="resume">
                         <a href="assets/docs/Resume.pdf" target="_blank">
                             <i class="fas fa-file icon"></i></a>
