Fixed skillsContent alignment issue

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/assets/styles.css">
+        <title>&lt;/&gt; Derek Slauson | Full-Stack Developer</title>
+
+        <!-- Font Awesome -->
         <link rel="stylesheet" 
             href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
             integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
             crossorigin="anonymous">
-        <title>&lt;/&gt; Derek Slauson | Full-Stack Developer</title>
 
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,38 +54,22 @@
                 <article id="skillsContent">
                     <h2>SKILLS</h2>
                     <span>
-                        <div>
-                            <i class="fab fa-html5 skillsIcon"></i>
-                        </div>
-                        <div>
-                            <p>HTML5</p>
-                        </div>
+                        <i class="fab fa-html5 skillsIcon"></i>
+                        <p>HTML5</p>
                     </span>
 
                     <span>
-                        <div>
-                            <i class="fab fa-css3-alt skillsIcon"></i>
-                        </div>
-                        <div>
-                            <p>CSS3</p>
-                        </div>
+                        <i class="fab fa-css3-alt skillsIcon"></i>
+                        <p>CSS3</p>
                     </span>
 
                     <span>
-                        <div>
-                            <i class="fab fa-js-square skillsIcon"></i>
-                        </div>
-                        <div>
-                            <p>Javascript</p>
-                        </div>
+                        <i class="fab fa-js-square skillsIcon"></i>
+                        <p>Javascript</p>
                     </span>
                     <span>
-                        <div>
-                            <i class="fab fa-github skillsIcon"></i>
-                        </div>
-                        <div>
-                            <p>Github</p>
-                        </div>
+                        <i class="fab fa-github skillsIcon"></i>
+                        <p>Github</p>
                     </span>
                 </article>
                 <article id="educationContent">
