Updated resume link, edited some text content

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <h2>ABOUT</h2>
                     <div id="v1"></div>
                     <h3>Full stack developer in the process of learning the tools to put my passion for problem solving and creating to work.</h3>
-                    <p>I've always wanted a job that's meaningful to me. For this reason I'm currently working towards completing the University of Wisconsin Full Stack Development Boot Camp. Prior to this, I worked at a grocery store for several years and completed an associates degree from Madison Area Technical College.</p>
-                    <p>I'm extremely excited to complete the boot camp and use the skills I gained to bring ideas to life in a web/software developer position while continuing to learn on the job. I'm passionate about building solutions, this is why I want to make an impact at a great company as a web/software developer.</p>
+                    <p>I've always wanted a job that's meaningful to me. For this reason I'm currently working towards completing the UW-Madison Full-Stack Development Bootcamp. Prior to this, I worked at a grocery store for several years and completed an associates degree from Madison Area Technical College.</p>
+                    <p>I'm extremely excited to complete the bootcamp and use the skills I gained to bring ideas to life in a web/software developer position while continuing to learn on the job. I'm passionate about building solutions, this is why I want to make an impact at a great company as a web/software developer.</p>
                 </article>
                 <article id="projectsContent">
                     <h2>PROJECTS</h2>
@@ -74,24 +74,6 @@
                               <a href="https://marsvolta4366.github.io/HackerNewsClone/" 
                                 class="btn btn-primary myButton"
                                 target="_blank">Check It Out</a>
-                            </div>
-                        </div>
-
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/images/SpotifyClone.png" alt="Screenshot of Spotify">
-                            <div class="card-body">
-                              <h5 class="card-title cardTitle">Spotify Clone</h5>
-                              <p class="card-text cardText">A clone of the Spotify website</p>
-                              <a href="#" class="btn btn-primary myButton">Check It Out</a>
-                            </div>
-                        </div>
-
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="http://placekitten.com/230/170" alt="Card image cap">
-                            <div class="card-body">
-                              <h5 class="card-title cardTitle">Interval Trainer</h5>
-                              <p class="card-text cardText">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, quas?</p>
-                              <a href="#" class="btn btn-primary myButton">Check It Out</a>
                             </div>
                         </div>
 
@@ -163,9 +145,9 @@
                 <article id="resumeContent">
                     <h2>RESUME</h2>
                     <section id="resume">
-                        <a href="assets/docs/Resume.pdf" target="_blank">
+                        <a href="assets/docs/Resume2.0.pdf" target="_blank">
                             <i class="fas fa-file icon"></i></a>
-                        <a href="assets/docs/Resume.pdf" target="_blank">
+                        <a href="assets/docs/Resume2.0.pdf" target="_blank">
                             <span class="iconText">Resume.pdf</span>
                         </a>
                     </section>
