--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&display=swap" rel="stylesheet">
     
         <!-- My CSS -->
-        <link rel="stylesheet" href="/assets/styles.css">
+        <link rel="stylesheet" href="assets/styles.css">
         <!-- <link rel="stylesheet" href="assets/styles.scss"> -->
     </head>
 
