Added picture and reworked colors

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         
         <main>
             <div id="missionStatement">
+                <img src="assets/images/PictureOfMe.jpg" alt="Picture of Derek Slauson">
                 <h2>I want to turn <span id="span1">ideas</span> into <span id="span2">reality.</span></h2>
             </div>
             <div id="articles">
